--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,3 +191,63 @@ footer {
     border: 0.1rem solid hsl(0, 0%, 100%);
     border-radius: 2rem;
 }
+
+@media (min-width: 1440px) {
+    nav {
+        padding: 4vw;
+    }
+    
+    nav ul {
+        font-size: 1.2rem;
+        gap: 3rem;
+    }
+
+    h1 {
+        padding: 1.5rem 25rem;
+        line-height: 3rem;
+    }
+
+    header p {
+        margin: 0rem 32rem;
+        line-height: 1.7rem;
+    }
+
+    main #servicesDiv {
+        display: grid;
+        justify-content: center;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        gap: 4rem;
+    }
+
+    main .services {
+        max-width: 50vw;
+    }
+
+    main #stayProductive {
+        margin: 4rem 0rem;
+        flex-direction: row;
+        max-height: 100vh;
+    }
+
+    main #stayProductive div {
+        width: 100%;
+    }
+
+    main #stayProductive div:nth-of-type(1) img {
+        max-width: 70%;
+    }
+
+    main #stayProductive div:nth-of-type(2) {
+        display: flex;
+        row-gap: 2rem;
+        flex-direction: column;
+        justify-content: center;
+        text-align: left;
+    }
+
+    main #stayProductive div:nth-of-type(2) h2 {
+        max-width: 70%;
+        font-size: 2.2rem;
+    }
+}
