--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,7 @@ h1, h2 {
 }
 
 h1 {
+    font-size: 20px;
     padding: 1.5rem 0rem;
 }
 
@@ -33,6 +34,10 @@ a {
     text-decoration: none;
 }
 
+#howFyloWorks {
+    text-decoration: underline;   
+}
+
 button {
     color: hsl(0, 0%, 100%);
     font-weight: 700;
@@ -41,6 +46,26 @@ button {
     border: none;
     border-radius: 2rem;
     background-image: linear-gradient(to right, hsl(176, 68%, 64%), hsl(198, 60%, 50%));
+}
+
+button:hover {
+    cursor: pointer;
+    background-image: linear-gradient(hsl(176, 68%, 64%), hsl(176, 68%, 64%));
+}
+
+.attribution {
+    margin-top: 2rem;
+    font-size: 11px;
+    text-align: center;
+}
+
+.attribution a {
+    color: hsl(228, 45%, 44%);
+}
+
+#invalid {
+    color: red;
+    display: none;
 }
 
 /* Nav bar */
@@ -72,9 +97,18 @@ nav img {
 /* Header */
 
 header {
+    max-width: 100vw;
     padding: 0vw 6vw;
     text-align: center;
     background-color: hsl(219, 30%, 18%);
+    background-image: url(../img/bg-curvy-mobile.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: bottom;
+}
+
+header div p {
+    font-size: 16px;
 }
 
 header img {
@@ -88,7 +122,7 @@ header #started {
 /* Main */
 
 main {
-    background-color: hsl(219, 30%, 18%);
+    background-color: hsl(218, 28%, 13%);
     padding: 0vw 6vw;
 }
 
@@ -127,6 +161,26 @@ main section form input::placeholder {
     opacity: 0.5;
 }
 
+main .services {
+    margin-bottom: 3rem;
+}
+
+main #stayProductive {
+    margin-top: 8rem;
+}
+
+main #stayProductive div:nth-of-type(1) img {
+    max-width: 100%;
+}
+
+main #stayProductive div:nth-of-type(2) {
+    text-align: left;
+    display: flex;
+    row-gap: 2rem;
+    flex-direction: column;
+    justify-content: center;
+}
+
 #earlyAcces {
     background-color: hsl(217, 28%, 15%);
     border-radius: 1rem;
@@ -138,10 +192,39 @@ main section form input::placeholder {
     padding-bottom: 1rem;
 }
 
+main #reviewDiv {
+    margin-top: 10rem;
+}
+
+main #reviewDiv .review {
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+    margin: 1rem 0rem;
+    text-align: left;
+    box-shadow: 5px 5px 15px 10px rgba(91, 90, 90, 0.21);
+    border-radius: 0.2rem;
+}
+
+main #reviewDiv .review .reviewDescription {
+    padding-top: 1.5rem;
+    display: flex;
+}
+
+main #reviewDiv .review .reviewDescription div:nth-of-type(1) {
+    max-width: 15%;
+    margin-right: 1rem;
+}
+
+main #reviewDiv .review .reviewDescription div:nth-of-type(1) img {
+    border-radius: 50%;
+    max-width: 100%;
+}
+
 /* Footer */
 
 footer {
-    padding: 15rem 6vw 6rem 6vw;
+    padding: 15rem 6vw 2rem 6vw;
     background-color: hsl(216, 53%, 9%);
 }
 
@@ -192,6 +275,10 @@ footer {
     border-radius: 2rem;
 }
 
+#socialMedia ul li img:hover {
+    border: 0.1rem solid hsl(176, 68%, 64%);
+}
+
 @media (min-width: 1440px) {
     nav {
         padding: 4vw;
@@ -207,9 +294,29 @@ footer {
         line-height: 3rem;
     }
 
+    header {
+        background-image: url(../img/bg-curvy-desktop.svg);
+    }
+
     header p {
         margin: 0rem 32rem;
         line-height: 1.7rem;
+    }
+
+    main #earlyAcces form {
+        display: flex;
+        justify-content: center;
+        column-gap: 2rem;
+        flex-direction: row;
+    }
+
+    main #earlyAcces form input {
+        margin-bottom: 0rem;
+        padding: 1rem 18rem;
+    }
+
+    main #earlyAcces form button {
+        padding: 1rem 10rem;
     }
 
     main #servicesDiv {
@@ -238,16 +345,64 @@ footer {
         max-width: 70%;
     }
 
-    main #stayProductive div:nth-of-type(2) {
-        display: flex;
-        row-gap: 2rem;
-        flex-direction: column;
-        justify-content: center;
-        text-align: left;
-    }
-
     main #stayProductive div:nth-of-type(2) h2 {
         max-width: 70%;
         font-size: 2.2rem;
+    }
+
+    main #reviewDiv {
+        display: flex;
+        flex-direction: row;
+        column-gap: 3rem;
+    }
+
+    main #reviewDiv .review .reviewDescription div:nth-of-type(2) {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    footer {
+        display: flex;
+        gap: 0;
+    }
+
+    footer #contactSec {
+        max-width: 55%;
+    }
+
+    footer #contactSec img {
+        margin-bottom: 2rem;
+    }
+
+    footer section #contact ul {
+        display: grid;
+        justify-content: center;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        grid-column-gap: 20px;
+        grid-row-gap: 20px;
+    }
+
+    footer section #contact ul li:first-of-type {
+        grid-area: 1 / 1 / 3 / 2;
+    }
+
+    footer section #contact ul li:nth-of-type(2) {
+        grid-area: 1 / 2 / 2 / 3;
+    }
+
+    footer section #contact ul li:nth-of-type(3) {
+        grid-area: 2 / 2 / 3 / 3;
+    }
+
+    #footerBar {
+        display: flex;
+        column-gap: 4rem;
+        margin-top: 6rem;
+    }
+
+    #socialMedia {
+        margin: 6rem 0rem 0rem 6rem;
     }
 }
